--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "travel",
   "version": "0.1.0",
-  "homepage": "https://Masianuy.github.io/react-gh-pages",
+  "homepage": "https://Masianuy.gitlab.io/travel",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
