--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "travel",
   "version": "0.1.0",
-  "homepage": "https://Masianuy.gitlab.io/travel",
   "private": true,
+  "homepage": "https://masianuy.github.io/traveling/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
