create law web site again

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "travel",
+  "name": "law-company",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://masianuy.github.io/traveling/",
+  "homepage": "https://masianuy.github.io/law-company/",
   "dependencies": {
     "gh-pages": "^4.0.0",
     "@testing-library/jest-dom": "^5.16.4",
